--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ a {
 
 .app-header h1 {
   font-size: 30px;
-  color: var(--color-dark);
+  color: var(--color-main);
   font-weight: 800;
   text-align: center;
 }
@@ -93,7 +93,7 @@ a {
   display: flex
 }
 .app-header .themeIcon > svg{
-    fill: var(--color-text);
+    fill: var(--color-main);
     height: 20px;
     width: 20px;
     cursor: pointer;
@@ -125,17 +125,13 @@ a {
   padding: 10px 16px;
 }
 
-.notes-title,
-.notes-count {
-  color: var(--color-main);
-  font-size: 24px;
-  font-weight: 600;
-}
 
 .notes-count {
   font-size: 18px;
   color: var(--color-gray);
+  font-weight: 600;
 }
+
 
 
 .notes-list {
